// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutesPageView renders correctly in compact layout 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "flexDirection": "row",
      },
      {
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "column",
        },
        {
          "height": 56,
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 28,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        ROUTES
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderColor": "#dd9933",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 6,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M12 3v12m0 0l-4-4m4 4l4-4M3 19h18"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4292712755,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "#dd9933",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Import Route
          </Text>
        </View>
      </View>
    </View>
    <View
      style={{}}
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`RoutesPageView renders correctly in normal layout 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "flexDirection": "row",
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "column",
        },
        {
          "width": 150,
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 28,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        ROUTES
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderColor": "#dd9933",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 6,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M12 3v12m0 0l-4-4m4 4l4-4M3 19h18"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4292712755,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "#dd9933",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Import Route
          </Text>
        </View>
      </View>
    </View>
    <View
      style={{}}
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;
